tests/snapshots/examples_fixtures/type_system__failing__90_adt_module_constructor_alias_not_exported.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/90_adt_module_constructor_alias_not_exported.flx
== compile ==
failed (module)
== diagnostics ==
--> compiler error[E018]: IMPORT NOT FOUND

Cannot find module `TypeSystem.GenericResultTree` to import.

  --> examples/type_system/failing/90_adt_module_constructor_alias_not_exported.flx:2:1
  |
2 | import TypeSystem.GenericResultTree as G
  | ^

Hint:
  Check that: 1) The module file exists (e.g., `TypeSystem.GenericResultTree.flx`), 2) The file is in a module root directory (current dir or ./src by default), 3) The module path matches the file structure (e.g., `Foo.Bar` → `Foo/Bar.flx`). Use `--root` flag to add more search paths.
  Looked for module `TypeSystem.GenericResultTree` under roots: examples/type_system/failing, src (imported from examples/type_system/failing/90_adt_module_constructor_alias_not_exported.flx).
== stdout ==
<not executed>
