tests/snapshots/examples_fixtures/type_system__failing__94_wrong_argument_count_too_many.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/94_wrong_argument_count_too_many.flx
== compile ==
failed (compile)
== diagnostics ==
Warning: missing CFG bytecode binding for IR call dest
== stdout ==
<not executed>
