tests/snapshots/examples_fixtures/type_system__failing__97_hm_fun_return_mismatch_contextual.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/97_hm_fun_return_mismatch_contextual.flx
== compile ==
failed (compile)
== diagnostics ==
Error[E300]: Return Type Mismatch

The body of this function does not match its return type.

  examples/type_system/failing/97_hm_fun_return_mismatch_contextual.flx:11:14
   |
11 |     let _f = if true {
   |              ^^^^^^^^^
12 |         ret_int
   | ^^^^^^^^^^^^^^^
13 |     } else {
   | ^^^^^^^^^^^^
14 |         ret_string
   | ^^^^^^^^^^^^^^^^^^
15 |     }
   | ^^^^^

Note:
  declared return type: Int
  body type: String

Help:
  Change the return annotation to `-> String` or change the body.
== stdout ==
<not executed>
