tests/snapshots/examples_fixtures/type_system__failing__98_hm_fun_arity_mismatch_contextual.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/98_hm_fun_arity_mismatch_contextual.flx
== compile ==
failed (compile)
== diagnostics ==
Error[E300]: Wrong Number Of Arguments

I am applying a function to too many arguments.

  examples/type_system/failing/98_hm_fun_arity_mismatch_contextual.flx:11:14
   |
11 |     let _f = if true {
   |              ^^^^^^^^^
12 |         one_arg
   | ^^^^^^^^^^^^^^^
   |         ------- this branch established the expected type
13 |     } else {
   | ^^^^^^^^^^^^
14 |         two_args
   | ^^^^^^^^^^^^^^^^
   |         -------- this branch conflicts with that type
15 |     }
   | ^^^^^

Note:
  this function takes: 1 argument(s)
  but this call passes: 2 argument(s)
  the `then` branch fixes the type expected from the whole `if`
  the `else` branch produces the competing type

Help:
  Remove 1 extra argument(s).
== stdout ==
<not executed>
