tests/snapshots/examples_fixtures/type_system__failing__Stage150Type.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/Stage150Type.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Annotation Type Mismatch

The value of `x` does not match its type annotation.

  examples/type_system/failing/Stage150Type.flx:32:23
   |
32 |         let x: Bool = 42
   |                       ^^
   |                       -- this value has type `Int`

   |                ---- but `x` was annotated as `Bool`

Note:
  annotated type: Bool
  value type: Int

Help:
  Booleans are not numeric in Flux. Use `true` or `false` here.
== stdout ==
<not executed>
